fix complaint new_rating ; fix css gap

--- a/front/IIS_SUDPI/src/styles/DashboardKK.css
+++ b/front/IIS_SUDPI/src/styles/DashboardKK.css
@@ -367,6 +367,7 @@ form button:hover {
   background: white;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  gap: 10px;
 }
 
 .timeline-item:hover {
